<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment"
    android:padding="@dimen/mps016"
    android:background="@color/grayscale">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_populer"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/rubik_medium"
                android:textSize="@dimen/ts16"/>

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mps200"
                app:fillColor="@color/white"
                app:pageColor="@color/dark_blue"
                app:radius="@dimen/mps006"
                app:slideInterval="3000"
                app:strokeColor="@color/sonic_silver"
                app:strokeWidth="@dimen/mps001"
                android:layout_marginTop="@dimen/mps006"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/rubik_medium"
                android:textSize="@dimen/ts16"
                android:layout_marginTop="@dimen/mps015"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/mps010"
                        app:cardElevation="@dimen/mps010"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/mps010"
                            android:background="@color/white">

                            <ImageView
                                android:layout_width="@dimen/mps050"
                                android:layout_height="@dimen/mps050"
                                android:src="@drawable/ic_action"
                                android:contentDescription="@string/action"
                                android:layout_gravity="center_horizontal"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/rubik_regular"
                                android:layout_marginTop="@dimen/mps006"
                                android:textSize="@dimen/ts14"
                                android:text="@string/action"
                                android:textColor="@color/dark_blue"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/mps010"
                        app:cardElevation="@dimen/mps010"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/mps010"
                            android:background="@color/white">

                            <ImageView
                                android:layout_width="@dimen/mps050"
                                android:layout_height="@dimen/mps050"
                                android:src="@drawable/ic_theater"
                                android:contentDescription="@string/drama"
                                android:layout_gravity="center_horizontal"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/rubik_regular"
                                android:layout_marginTop="@dimen/mps006"
                                android:textSize="@dimen/ts14"
                                android:text="@string/drama"
                                android:textColor="@color/dark_blue"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/mps010"
                        app:cardElevation="@dimen/mps010"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/mps010"
                            android:background="@color/white">

                            <ImageView
                                android:layout_width="@dimen/mps050"
                                android:layout_height="@dimen/mps050"
                                android:src="@drawable/ic_cartoon"
                                android:contentDescription="@string/cartoon"
                                android:layout_gravity="center_horizontal"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/rubik_regular"
                                android:layout_marginTop="@dimen/mps006"
                                android:textSize="@dimen/ts14"
                                android:text="@string/cartoon"
                                android:textColor="@color/dark_blue"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/mps010"
                        app:cardElevation="@dimen/mps010"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/mps010"
                            android:background="@color/white">

                            <ImageView
                                android:layout_width="@dimen/mps050"
                                android:layout_height="@dimen/mps050"
                                android:src="@drawable/ic_sport"
                                android:layout_gravity="center_horizontal"
                                android:contentDescription="@string/sport"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/rubik_regular"
                                android:layout_marginTop="@dimen/mps006"
                                android:textSize="@dimen/ts14"
                                android:text="@string/sport"
                                android:textColor="@color/dark_blue"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/mps010"
                        app:cardElevation="@dimen/mps010"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/mps010"
                            android:background="@color/white">

                            <ImageView
                                android:layout_width="@dimen/mps050"
                                android:layout_height="@dimen/mps050"
                                android:src="@drawable/ic_berita"
                                android:contentDescription="@string/news"
                                android:layout_gravity="center_horizontal"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/rubik_regular"
                                android:layout_marginTop="@dimen/mps006"
                                android:textSize="@dimen/ts14"
                                android:text="@string/news"
                                android:textColor="@color/dark_blue"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranting_tertinggi"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/rubik_medium"
                android:textSize="@dimen/ts16"
                android:layout_marginTop="@dimen/mps015"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_yang_akan_datang"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/rubik_medium"
                android:textSize="@dimen/ts16"
                android:layout_marginTop="@dimen/mps015"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>